syntax = "proto3";

option go_package = "proto";

import "web/proto/vm.proto";

message VLAN {
	uint32 id = 1;
	string alias = 2;
}

message Experiment {
	string id = 1;
	string name = 2;
	string topology = 3;
	string scenario = 4;
	string start_time = 5;
	bool running = 6;
	string status = 7;
	uint32 vm_count = 8;
	uint32 vlan_min = 9;
	uint32 vlan_max = 10;
	repeated VLAN vlans = 11;
	repeated VM vms = 12;
}

message ExperimentList {
	repeated Experiment experiments = 1;
}

message UpdateExperimentRequest {
	string name = 1;
	string status = 2;
	string topology = 3;
	string scenario = 4;
	string start_time = 5;
	uint32 vm_count = 6;
	uint32 vlan_min = 9;
	uint32 vlan_max = 10;
	uint32 vlan_count = 11;
}

message TopologyList {
	repeated string topologies = 1;
}

message ScenarioList {
	repeated string scenarios = 1;
}

message DiskList {
	repeated string disks = 1;
}

message FileList {
	repeated string files = 1;
}

message CreateExperimentRequest {
	string name = 1;
	string topology = 2;
	string scenario = 3;
	uint32 vlan_min = 4;
	uint32 vlan_max = 5;
}

message CaptureSnapshotRequest {
	string filename = 1;
}

message BackingImageRequest {
	string filename = 1;
}

message StartCaptureRequest {
  string interface = 1;
  string filename = 2;
}

message UpdateScheduleRequest {
	string algorithm = 1;
}